test: add unit tests for user registration, retrieval, and update functionalities